# zhaba

./: .clang-tidy  .gitignore  CMakeLists.txt  common.c  common.h  expand.c  file_render.c  file_render.h  html_render.c  html_render.h  html_writer.c  html_writer.h  lexer.c  lexer.h  main.c  pack_res.sh  parser.c  parser.h
data/css/: style.css
lib/: common.c  common.h  file_render.c  file_render.h  html_render.c  html_writer.c  html_writer.h  lexer.c  lexer.h  lib.c  lib.h  parser.c  parser.h  prep.c  prep.h  utf8.c
lib/res/: style.inc
mockup/: hello-world.html
res/: reset.inc  style.inc
test/: CMakeLists.txt  html_reader.c  html_reader.h  main.c
test-files/: if.c
test/cases/: arr_access.c  arr_access.html  assign.c  assign.html  cast.c  cast.html  comments.c  comments.html  comp.c  comp.html  decl.c  decl.html  decl_assign_invoke.c  decl_assign_invoke.html  define.c  define.html  header.h  hello.html  if.c  if.html  ifelse.c  ifelse.html  include_local.c  include_local.html  label.c  label.html  main_args.html  ref_deref.c  ref_deref.html  struct_access.c  struct_access.html  struct_deref.c  struct_deref.html  switch.c  switch.html  typedef_decl.c  typedef_decl.html
test/cases/prep/: define.c  define.exp.c  define_spaced.c  escape.c  escape.exp.c  external.exp.c  header_prot.h  header_recur.h  if_defined.c  if_defined.exp.c  ifdef.c  ifdef.exp.c  ifndef.c  ifndef.exp.c  include.exp.c  include_recur.c  include_recur.exp.c  undef.c  undef.exp.c
